--- a/.editorconfig
+++ b/.editorconfig
@@ -16,3 +16,10 @@ indent_size = 8
 
 [*.md]
 trim_trailing_whitespace = false
+
+[Makefile]
+indent_style = tab
+
+[.travis.yml]
+indent_style = space
+indent_size = 2
